add national geographic logo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "js/sweetalert"]
 	path = js/sweetalert
 	url = https://github.com/t4t5/sweetalert.git
+[submodule "scripts/--force"]
+	path = scripts/--force
+	url = https://github.com/Clevero/national-geographic-photo-of-the-day.git
